src/components/SortingTab/SortingTab.module.scss
@import '../../config';

.SortingTab {
  display: inline-block;
  background-color: $true-white-color;
  padding: 13px 10px;
  font-size: 16px;
  border: 1px solid $light-gray-color-2;
  border-radius: $border-radius-default;
  cursor: pointer;
  text-align: center;
  flex-basis: ($right-column-width - 1px) / 2;
  
  &:first-child {
    border-right: none;
    border-radius: $border-radius-default 0 0 $border-radius-default;
  }
  
  &:last-child {
    border-radius: 0 $border-radius-default $border-radius-default 0;
    border-left: none;
  }

  &:not(.checked):hover {
    background: $secondary-color;
    border-color: $primary-color;

    .Name {
      color: $primary-color;
    }
  }

  .Name {
    font-weight: 600;
    font-style: normal;
    font-size: 12px;
    line-height: 20px;
    text-transform: uppercase;
    color: $dark-gray-color;
  }
}

.SortingTab.checked {
  background-color: $primary-color;
  border: none;
  flex-basis: ($right-column-width - 1px) / 2 + 1px;
  pointer-events: none;

  .Name {
    color: $true-white-color;
  }
}

